# ksc-defender

./: .gitignore  README.en.md  README.md
conf/antivirus/: antivirus.conf
conf/kylin-firewall/: kylin-firewall.conf
conf/kylin-firewall/custom_services/: default.xml
conf/kylin-firewall/services/: kylin-ipmsg.xml  share-desktop.xml
conf/kylin-firewall/zones/: custom.xml  trusted.xml  work.xml
conf/kylin-password/: kylin-password.conf
conf/kylin-password/pam-config/: pwquality.conf
src/: CMakeLists.txt  ksc_comdef.h  ksc_error.h  ksc_public.h  ksc_struct_info.h  main.cpp
src/account/: KscAccountCli.cpp  KscAccountCli.h
src/antivirus/: antivirus_handle.c  antivirus_handle.h
src/base/: KscBase.cpp  KscBase.h
src/common/: KscPamConfigParse.cpp  KscPamConfigParse.h  KscStringConvert.cpp  KscStringConvert.h  ksc_db.c  ksc_db.h  ksc_firewall.c  ksc_firewall.h
src/firewall/: firewall_handle.c  firewall_handle.h
src/password/: KscPswConf.cpp  KscPswConf.h
